--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth-project",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "app.js",
   "directories": {
     "lib": "lib"
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/schuylerdare96/NodeJS-auth-project#readme",
   "dependencies": {
+    "base64url": "^3.0.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2"
   }
 }
