--- a/package.json
+++ b/package.json
@@ -1,34 +1,22 @@
 {
-  "name": "auth-project",
+  "name": "express-session-authenticator-starter",
   "version": "1.0.0",
-  "description": "",
-  "type": "commonjs",
+  "description": "A tutorial on session based user authentication using Passport JS",
   "main": "app.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/schuylerdare96/NodeJS-auth-project.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/schuylerdare96/NodeJS-auth-project/issues"
-  },
-  "homepage": "https://github.com/schuylerdare96/NodeJS-auth-project#readme",
   "dependencies": {
-    "base64url": "^3.0.1",
-    "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.1",
-    "mongoose": "^6.5.2"
+    "connect-mongo": "^3.1.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.7.12",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
