implemented passport-jwt-auth-strategy

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_STRING= mongodb+srv://schuylerdare96:rrklrrklrrkl@cluster0.r1mo1.mongodb.net/tutorial_db?retryWrites=true&w=majority
-SECRET=meoww
+NODE_ENV=development
+DB_STRING=mongodb+srv://schuylerdare96:rrklrrklrrkl@cluster0.r1mo1.mongodb.net/tutorial_db?retryWrites=true&w=majority
