--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "express-session-authenticator-starter",
+  "name": "jwt-auth",
   "version": "1.0.0",
-  "description": "A tutorial on session based user authentication using Passport JS",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^3.1.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "mongoose": "^5.7.12",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
   }
 }
